# gelada

./: .bazelrc  .gitignore  .gitmodules  CREDITS.md  MODULE.bazel  Makefile  README.md
bazel/rules_cc/: BUILD.bazel  defs.bzl
bazel/rules_cc/tools/embed/: __main__.py
cmd/: BUILD.bazel  gelada.cpp
dev/stdlib/: BUILD.bazel  MODULE.bazel
dev/stdlib/include/experimental/: embed
etc/copyright/: BUILD.bazel  copyright.cpp  copyright.hpp
etc/program/: BUILD.bazel  program.cpp  program.hpp
lib/adapters/yaml-json/: BUILD.bazel  yaml-json.cpp  yaml-json.hpp
lib/bitbucket/: BUILD.bazel  bitbucket.cpp  bitbucket.hpp
lib/github/: BUILD.bazel  github.cpp  github.hpp
lib/itertools/: BUILD.bazel  itertools.cpp  itertools.hpp
lib/logging/: BUILD.bazel  logging.cpp  logging.hpp
lib/math/: BUILD.bazel  math.cpp  math.hpp
lib/pathlib/: BUILD.bazel  pathlib.cpp  pathlib.hpp
lib/requests/: BUILD.bazel  requests.cpp  requests.hpp
lib/tarfile/: BUILD.bazel  tarfile.cpp  tarfile.hpp
lib/tempfile/: tempfile.cpp  tempfile.hpp
lib/threading/hardware/: BUILD.bazel  hardware.cpp  hardware.hpp
lib/threading/tempfile/: BUILD.bazel  tempfile.cpp  tempfile.hpp
lib/timer/: BUILD.bazel  timer.cpp  timer.hpp
lib/urllib/request/: BUILD.bazel  request.cpp  request.hpp
lib/zipfile/: BUILD.bazel  zipfile.cpp  zipfile.hpp
scripts/cmd/configure/python/: __main__.py
scripts/cmd/install/: BUILD.bazel  __init__.py  __main__.py
scripts/cmd/uninstall/: BUILD.bazel  __main__.py
scripts/etc/basedir/: __init__.py  _basedir.py
scripts/etc/root/: BUILD.bazel  __init__.py  _root.py
scripts/lib/ansi/: BUILD.bazel  __init__.py  _ansi.py
scripts/lib/logging/: BUILD.bazel  __init__.py  _logging.py
scripts/lib/os/: __init__.py  _os.py
scripts/lib/platform/: BUILD.bazel  __init__.py  _platform.py
scripts/lib/python/: __init__.py  _python.py
scripts/src/exceptions/: __init__.py  _exceptions.py
src/ast/anylang/: BUILD.bazel  anylang.cpp  anylang.hpp
src/ast/python/: BUILD.bazel  isinstance.py  normalize.py  python.cpp  python.hpp  python.py
src/ast/starlark/: BUILD.bazel  isinstance.py  starlark.cpp  starlark.hpp  starlark.py
src/bitbucket/: BUILD.bazel  bitbucket.cpp  bitbucket.hpp
src/cache/: BUILD.bazel  cache.cpp  cache.hpp  protocol.json
src/documents/execflow/: BUILD.bazel  execflow.cpp  execflow.hpp  protocol.json
src/documents/summary/: BUILD.bazel  protocol.json  summary.cpp  summary.hpp
src/documents/workflow/: BUILD.bazel  protocol.json  workflow.cpp  workflow.hpp
src/errors/filesystem/: BUILD.bazel  filesystem.cpp  filesystem.hpp
src/errors/python/: BUILD.bazel  python.cpp  python.hpp
src/errors/rapidjson/: BUILD.bazel  rapidjson.cpp  rapidjson.hpp
src/errors/yaml-cpp/: BUILD.bazel  yaml-cpp.cpp  yaml-cpp.hpp
src/estimators/alpha/: BUILD.bazel  alpha.cpp  alpha.hpp
src/ext/pybind11/gil/: BUILD.bazel  gil.cpp  gil.hpp
src/ext/pybind11/heavy/: BUILD.bazel  heavy.cpp  heavy.hpp
src/ext/rapidjson/filesystem/: BUILD.bazel  filesystem.cpp  filesystem.hpp
src/ext/rapidjson/schema/: BUILD.bazel  schema.cpp  schema.hpp
src/ext/yaml-cpp/adapters/: BUILD.bazel  adapters.cpp  adapters.hpp
src/github/: BUILD.bazel  github.cpp  github.hpp
src/kvcache/: BUILD.bazel  kvcache.cpp  kvcache.hpp
src/pylada/: BUILD.bazel  protocol.json  pylada.cpp  pylada.hpp
src/shutil/: BUILD.bazel  shutil.cpp  shutil.hpp
src/tarfile/: BUILD.bazel  extract.py  is_tarfile.py  tarfile.cpp  tarfile.hpp
src/urllib/request/: BUILD.bazel  request.cpp  request.hpp  urlretrieve.py
src/zipfile/: BUILD.bazel  extract.py  is_zipfile.py  zipfile.cpp  zipfile.hpp
