"""
 ██████╗ ███████╗██╗      █████╗ ██████╗  █████╗
██╔════╝ ██╔════╝██║     ██╔══██╗██╔══██╗██╔══██╗
██║  ███╗█████╗  ██║     ███████║██║  ██║███████║
██║   ██║██╔══╝  ██║     ██╔══██║██║  ██║██╔══██║
╚██████╔╝███████╗███████╗██║  ██║██████╔╝██║  ██║
 ╚═════╝ ╚══════╝╚══════╝╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝

Copyright 2024 Sergei Bogdanov <syubogdanov@outlook.com>

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
"""

module(
    name = "gelada",
    version = "0.0-alpha",
)

bazel_dep(
    name = "argparse",
    version = "3.0.0",
)
bazel_dep(
    name = "pybind11_bazel",
    version = "2.12.0",
)
bazel_dep(
    name = "rules_cc",
    version = "0.0.9",
)
bazel_dep(
    name = "rapidjson",
    version = "1.1.0",
)
bazel_dep(
    name = "rules_python",
    version = "0.31.0",
)
bazel_dep(
    name = "yaml-cpp",
    version = "0.8.0",
)
bazel_dep(name = "stdlib")
local_path_override(
    module_name = "stdlib",
    path = "dev/stdlib",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "cppitertools",
    integrity = "sha256-IE+gyHLA80ySY4YqX0uTqYWP3p/a6AZP68doOGPxSX0=",
    strip_prefix = "cppitertools-2.1",
    urls = [
        "https://github.com/ryanhaining/cppitertools/archive/refs/tags/v2.1.zip",
        "https://github.com/ryanhaining/cppitertools/archive/refs/tags/v2.1.tar.gz",
    ],
)

http_archive(
    name = "levenshtein",
    integrity = "sha256-IEYUZteSeueYIfyrHwcTYiJww0un2bWCU5e8diP9xyY=",
    strip_prefix = "levenshtein-2.0",
    urls = [
        "https://github.com/syubogdanov/levenshtein/archive/refs/tags/v2.0.zip",
        "https://github.com/syubogdanov/levenshtein/archive/refs/tags/v2.0.tar.gz",
    ],
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    python_version = "3.12",
)
