"""
 ██████╗ ███████╗██╗      █████╗ ██████╗  █████╗
██╔════╝ ██╔════╝██║     ██╔══██╗██╔══██╗██╔══██╗
██║  ███╗█████╗  ██║     ███████║██║  ██║███████║
██║   ██║██╔══╝  ██║     ██╔══██║██║  ██║██╔══██║
╚██████╔╝███████╗███████╗██║  ██║██████╔╝██║  ██║
 ╚═════╝ ╚══════╝╚══════╝╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝

Copyright 2024 Sergei Bogdanov <syubogdanov@outlook.com>

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
"""

load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel/rules_cc:defs.bzl", "embed")

cc_library(
    name = "cache",
    srcs = [embed("cache.cpp")],
    hdrs = ["cache.hpp"],
    deps = [
        "//src/errors/filesystem",
        "//src/ext/rapidjson/build",
        "//src/ext/rapidjson/filesystem",
        "//src/ext/rapidjson/schema",
        "@rapidjson",
        "@stdlib",
    ],
    additional_compiler_inputs = ["protocol.json"],
    visibility = ["//visibility:public"],
)
